fix low contrast of the active line in the editor

--- a/arhiv/src/ui/components/Form/Editor/index.css
+++ b/arhiv/src/ui/components/Form/Editor/index.css
@@ -39,6 +39,7 @@
     }
     &.cm-focused .cm-activeLine {
       @apply var-item-active-bg-color;
+      @apply bg-opacity-50 dark:bg-opacity-40;
     }
     & .cm-placeholder {
       @apply var-placeholder-color;
